--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,25 @@
 {
-  "manifest_version": 3,
-  "name": "Piwik PRO Debugger Extended",
-  "version": "1.0",
-  "description": "Extends the currently implemented debugger functionalities.",
-  "icons": {
-    "16": "images/icon-16.png",
-    "32": "images/icon-32.png",
-    "48": "images/icon-48.png",
-    "128": "images/icon-128.png"
-  },
-  "content_scripts": [
-    {
-      "js": ["scripts/content.js"],
-      "matches": ["https://*/*"]
+    "manifest_version": 3,
+    "name": "Piwik PRO Debugger Extended",
+    "version": "1.0",
+    "description": "Extends the currently implemented debugger functionalities.",
+    "icons": {
+        "16": "images/icon-16.png",
+        "32": "images/icon-32.png",
+        "48": "images/icon-48.png",
+        "128": "images/icon-128.png"
+    },
+    "content_scripts": [{
+        "js": ["scripts/content.js"],
+        "matches": ["https://*/*"]
+    }],
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "{378b025a-d5e7-4f8a-b2b7-5fe38e28c48b}",
+            "strict_min_version": "50.0"
+        }
     }
-  ]
+
+
 }
+x
